--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f96a2">  <td>24/02/26 00:11:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TodoitsMobileTest.createTestProject()[pri:0, instance:tests.android.TodoitsMobileTest@359f7cdf]">createTestProject</td> 
+<tr bgcolor="9f96a2">  <td>24/02/26 20:05:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TodoitsMobileTest.createTask()[pri:2, instance:tests.android.TodoitsMobileTest@359f7cdf]">createTask</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>24/02/26 00:11:19</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TodoitsMobileTest.setup()[pri:0, instance:tests.android.TodoitsMobileTest@359f7cdf]">&gt;&gt;setup</td> 
+<tr bgcolor="9f96a2">  <td>24/02/26 20:05:10</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TodoitsMobileTest.setup()[pri:0, instance:tests.android.TodoitsMobileTest@359f7cdf]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
