--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Chan\AppData\Local\Temp\testng-eclipse-547972509\testng-customsuite.xml</span>
+                    <span>C:\Users\Chan\AppData\Local\Temp\testng-eclipse--195285958\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,6 +102,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.android.TodoitsMobileTest" class="method navigator-link" hash-for-method="createTask">createTask</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="tests.android.TodoitsMobileTest" class="method navigator-link" hash-for-method="createTestProject">createTestProject</a> <!-- method navigator-link -->
@@ -127,6 +132,13 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="createTask">
+                  </a> <!-- createTask -->
+                  <span class="method-name">createTask</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="createTestProject">
                   </a> <!-- createTestProject -->
                   <span class="method-name">createTestProject</span>
@@ -137,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Chan\AppData\Local\Temp\testng-eclipse-547972509\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Chan\AppData\Local\Temp\testng-eclipse--195285958\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createTestProject')
 data.setCell(0, 2, 'tests.android.TodoitsMobileTest')
-data.setCell(0, 3, 16276);
+data.setCell(0, 3, 16341);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'createTask')
+data.setCell(1, 2, 'tests.android.TodoitsMobileTest')
+data.setCell(1, 3, 13126);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 29 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -228,23 +244,31 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">launchApp</span>
-                <span class="method-start">4148 ms</span>
+                <span class="method-start">2825 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">29779 ms</span>
+                <span class="method-start">16711 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">createTestProject</span>
-                <span class="method-start">30412 ms</span>
+                <span class="method-start">17354 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeApp([TestResult name=createTestProject status=SUCCESS method=TodoitsMobileTest.createTestProject()[pri:0...)</span>
-                <span class="method-start">46690 ms</span>
+                <span class="method-name">closeApp([TestResult name=createTestProject status=SUCCESS method=TodoitsMobileTest.createTestProject()[pri:1...)</span>
+                <span class="method-start">33696 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">createTask</span>
+                <span class="method-start">33699 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeApp([TestResult name=createTask status=SUCCESS method=TodoitsMobileTest.createTask()[pri:2, instance:tes...)</span>
+                <span class="method-start">46826 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">serverStop</span>
-                <span class="method-start">46728 ms</span>
+                <span class="method-start">46857 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
