--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="618275">  <td>24/02/26 23:53:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.TodoitsMobileTest@222545dc]">&lt;&lt;closeApp</td> 
+<tr bgcolor="777aab">  <td>24/02/27 22:22:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.TodoitsMobileTest@38c6f217]">&lt;&lt;closeApp</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>24/02/26 23:53:30</td>   <td>-16279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TodoitsMobileTest.createTestProject()[pri:0, instance:tests.android.TodoitsMobileTest@222545dc]">createTestProject</td> 
+<tr bgcolor="777aab">  <td>24/02/27 22:22:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.TodoitsMobileTest@38c6f217]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="dcc9fe">  <td>24/02/27 22:22:11</td>   <td>-13127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TodoitsMobileTest.createTask()[pri:2, instance:tests.android.TodoitsMobileTest@38c6f217]">createTask</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="618275">  <td>24/02/26 23:53:04</td>   <td>-42543</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApp()[pri:0, instance:tests.android.TodoitsMobileTest@222545dc]">&gt;&gt;launchApp</td> 
+<tr bgcolor="dcc9fe">  <td>24/02/27 22:21:55</td>   <td>-29472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TodoitsMobileTest.createTestProject()[pri:1, instance:tests.android.TodoitsMobileTest@38c6f217]">createTestProject</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>24/02/27 22:21:40</td>   <td>-44001</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApp()[pri:0, instance:tests.android.TodoitsMobileTest@38c6f217]">&gt;&gt;launchApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="618275">  <td>24/02/26 23:53:00</td>   <td>-46688</td> <td title="&gt;&gt;BaseTest.serverStart()[pri:0, instance:tests.android.TodoitsMobileTest@222545dc]">&gt;&gt;serverStart</td> 
+<tr bgcolor="777aab">  <td>24/02/27 22:21:37</td>   <td>-46823</td> <td title="&gt;&gt;BaseTest.serverStart()[pri:0, instance:tests.android.TodoitsMobileTest@38c6f217]">&gt;&gt;serverStart</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="618275">  <td>24/02/26 23:53:46</td>   <td>37</td> <td title="&lt;&lt;BaseTest.serverStop()[pri:0, instance:tests.android.TodoitsMobileTest@222545dc]">&lt;&lt;serverStop</td> 
+<tr bgcolor="777aab">  <td>24/02/27 22:22:24</td>   <td>31</td> <td title="&lt;&lt;BaseTest.serverStop()[pri:0, instance:tests.android.TodoitsMobileTest@38c6f217]">&lt;&lt;serverStop</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>24/02/26 23:53:29</td>   <td>-16912</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TodoitsMobileTest.setup()[pri:0, instance:tests.android.TodoitsMobileTest@222545dc]">&gt;&gt;setup</td> 
+<tr bgcolor="dcc9fe">  <td>24/02/27 22:21:54</td>   <td>-30114</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TodoitsMobileTest.setup()[pri:0, instance:tests.android.TodoitsMobileTest@38c6f217]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
