--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">44,023</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42,405</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.android.TodoitsMobileTest</td><td><a href="#m0">createTask</a></td><td rowspan="1">1709043731460</td><td rowspan="1">13126</td></tr><tr class="passedeven"><td><a href="#m1">createTestProject</a></td><td rowspan="1">1709043715115</td><td rowspan="1">16341</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.android.TodoitsMobileTest</td><td><a href="#m0">ReopenTask</a></td><td rowspan="1">1709052754208</td><td rowspan="1">7871</td></tr><tr class="passedeven"><td><a href="#m1">createTask</a></td><td rowspan="1">1709052743644</td><td rowspan="1">10563</td></tr><tr class="passedeven"><td><a href="#m2">createTestProject</a></td><td rowspan="1">1709052729302</td><td rowspan="1">14337</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.android.TodoitsMobileTest#createTask</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.android.TodoitsMobileTest#createTestProject</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.android.TodoitsMobileTest#ReopenTask</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.android.TodoitsMobileTest#createTask</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.android.TodoitsMobileTest#createTestProject</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
